--- a/healix-web/package.json
+++ b/healix-web/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "ff": "^0.2.2",
+    "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "style-components": "^0.1.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
